<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_bar_style"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:padding="5sp"
            android:src="@drawable/back_icon" />

        <View
            android:id="@+id/view1"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_btn"
            android:layout_toRightOf="@+id/back_btn"
            android:background="#7a99b5" />

        <View
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_btn"
            android:layout_toRightOf="@+id/view1"
            android:background="#f2f6fa" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_btn"
            android:layout_alignTop="@+id/back_btn"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:paddingLeft="50sp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/banner"
        android:layout_below="@+id/header_sec"
        android:layout_marginTop="-5dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Subject"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:visibility="gone" />


            <Spinner
                android:id="@+id/spinnerGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerGrade"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:visibility="gone" />

            <EditText
                android:id="@+id/description_edt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/marks_edt"
                android:layout_below="@+id/spinnerCard"
                android:layout_margin="10dp"
                android:background="@drawable/textbox"
                android:gravity="left|top"
                android:hint="@string/enter_description"
                android:lines="4"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/header_sec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/ttitle_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/attendance_menu"
            android:gravity="center|left"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:text="Class"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/rbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@drawable/textbox"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/defaultval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultval"
                android:textColor="@color/white" />
        </RadioGroup>
    </LinearLayout>

    <com.inmobi.monetization.IMBanner
        android:id="@+id/banner"
        adSize="15"
        appId="@string/InMobi_Property_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/banner"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/banner"
        android:background="@android:color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/footer"
        android:textColor="#4b586c"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="Offline Mode"
        android:textColor="@color/offline_mode"
        android:textSize="14sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/btn_att_submit"
        android:gravity="center"
        android:text="Create Behaviour"
        android:textColor="@android:color/white" />


</RelativeLayout>